<resources>
    <string name="app_name" translatable="false">Papuh</string>
    <string name="package_name" translatable="false">com.alexcruz.papuh</string>
    <string name="app_long_name" translatable="false">Papuh Walls v</string>
    <string name="app_dev_name">by Alex Cruz</string>
    <string name="email_address" translatable="false">mazdarider23@gmail.com</string>
    <string name="play_store_link" translatable="false">https://play.google.com/store/apps/details?id=com.alexcruz.papuh</string>
    <string name="googleplus_link" translatable="false">https://plus.google.com/u/0/communities/117004088255020338497</string>
    <string name="title" translatable="false">Papuh Walls</string>
    <string name="gplus_join">JOIN</string>
    <string name="ratebtn">RATE</string>
    <string name="description">Papuh was created by Alex Cruz to not only provide a central location for all his wallpapers but also to easily update them for those that use them. This app was built using open source libraries and contributions to the open source community.</string>
    <string name="play_card_title">Papuh Walls on Google Plus</string>
    <string name="play_card_content">Join the Papuh Walls community for support and to share</string>
    <string name="section_home">Home</string>
    <string name="section_all_walls">All Walls</string>
    <string name="section_android_walls">Android</string>
    <string name="section_bw_walls">Black &amp; White</string>
    <string name="section_blur_walls">Blur</string>
    <string name="section_clouds_walls">Clouds</string>
    <string name="section_misc_walls">Misc</string>
    <string name="section_mustaches_walls">Mustaches</string>
    <string name="section_nexus_walls">Nexus</string>
    <string name="section_original_walls">Original Walls</string>
    <string name="section_papuh_walls">Papuh Swag</string>
    <string name="section_solids_walls">Solids</string>
    <string name="section_stars_walls">Stars</string>
    <string name="section_rom_category">CUSTOM ROMS</string>
    <string name="section_aicp_walls">AICP</string>
    <string name="section_brokenos_walls">BrokenOS</string>
    <string name="section_candy_walls">Candy ROM</string>
    <string name="section_du_walls">Dirty Unicorns</string>
    <string name="section_eos_walls">EOS</string>
    <string name="section_liquidsmooth_walls">Liquid Smooth</string>
    <string name="section_omni_walls">OmniROM</string>
    <string name="section_orion_walls">Orion</string>
    <string name="section_pa_walls">Paranoid Android</string>
    <string name="section_pacrom_walls">PAC ROM</string>
    <string name="section_rr_walls">Resurrection Remix</string>
    <string name="section_slim_walls">Slim</string>
    <string name="section_tesla_walls">Tesla</string>
    <string name="section_twistedaosp_walls">Twisted AOSP</string>
    <string name="section_validus_walls">Validus</string>
    <string name="section_aboutapp">About Papuh Walls</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_dialog_title">Changelog &#38; Info</string>
    <string name="first_slide_title">Welcome to Papuh!</string>
    <string name="first_slide_description">Keeping your device looking awesome!</string>
    <string name="second_slide_title">See a wall you like?</string>
    <string name="second_slide_description">Just click and set your wall instantly!\n\nIs that easy! No hassle!</string>
    <string name="third_slide_title">Don\'t like the app\'s theme?</string>
    <string name="third_slide_description">Just head over to settings and change it! With built in color changers, you can change the look of this app in real time until you\'re absolutely happy!</string>
    <string name="fourth_slide_title">Want to contribute?</string>
    <string name="fourth_slide_description">All contributions are accepted!\n\nBig or small, this is all about the community! That said, this app will always be free of charge and open sourced!</string>
    <string name="last_slide_title">That\'s it!</string>
    <string name="last_slide_description">Enjoy the app :-)</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">OH SNAP!!\n\nAlex must of fell asleep on\nthe computer again!\nGo ahead let him have it!</string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart Papuh</string>
    <string name="customactivityoncrash_error_activity_error_details">Error Info</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error Info</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Ok</string>
    <string name="settings">Settings</string>
    <string name="wallpaper_downloading_wait">Please wait while we pull the wallpaper</string>
    <string name="wallpaper_item_name">"Wallpaper "</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="reset_data">Reset Data</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="theme_toolbar_title">Toolbar</string>
    <string name="theme_toolbar_summary">Change color of the toolbar</string>
    <string name="theme_navbar_title">NavBar (Lollipop/M Only)</string>
    <string name="theme_navbar_summary">Change color of the navigation bar</string>
    <string name="theme_statusbar_tint_title">Status Bar Tint (Lollipop/M Only)</string>
    <string name="theme_enable_statusbar_tint_summary">Enable Status Bar Tint</string>
    <string name="theme_disable_statusbar_tint_summary">Disable Status Bar Tint</string>
    <string name="theme_navbar_tint_title">NavBar Tint (Lollipop/M Only)</string>
    <string name="theme_enable_navbar_tint_summary">Enable Navigation Bar Tint</string>
    <string name="theme_disable_navbar_tint_summary">Disable Navigation Bar Tint</string>
    <string name="theme_background_theme_title">Background</string>
    <string name="theme_background_theme_summary">Change color of the background</string>
    <string name="theme_primary_text">Primary Text Color</string>
    <string name="theme_primary_text_summary">Changes the color of the primary text in the home/credits screen</string>
    <string name="theme_secondary_text">Secondary Text Color</string>
    <string name="theme_secondary_text_summary">Changes the color of the secondary text in the home/credits screen</string>
    <string name="theme_accent">Accent Color</string>
    <string name="theme_accent_summary">Changs the accent color in the home/credits screen</string>
    <string name="theme_material_drawer_settings">Material Drawer</string>
    <string name="theme_drawer_theme_title">Drawer Background</string>
    <string name="theme_drawer_normal_icon">Drawer Normal Icon</string>
    <string name="theme_drawer_selected_icon">Drawer Selected Icon</string>
    <string name="theme_drawer_theme_summary">Change color of the drawer</string>
    <string name="theme_drawer_text_theme_title">Drawer Text</string>
    <string name="theme_drawer_text_theme_summary">Change color of the material drawer\'s text</string>
    <string name="theme_drawer_selected_text_theme_title">Drawer Selected Text</string>
    <string name="theme_drawer_selected_text_theme_summary">Change color of the material drawer\'s selected text</string>
    <string name="theme_drawer_selector_theme_title">Drawer Selector</string>
    <string name="theme_drawer_selector_theme_summary">Change color of the material drawer\'s selector</string>
    <string name="theme_badge_background_theme_title">Drawer Badge Background</string>
    <string name="theme_badge_background_theme_summary">Change color of the material drawer badge\'s background</string>
    <string name="theme_badge_text_theme_title">Drawer Badge Text</string>
    <string name="theme_badge_text_theme_summary">Change color of the material drawer badge\'s text</string>
    <string name="theme_wallpaper_fab_settings">Favorite Action Button</string>
    <string name="theme_fab_apply">Apply Button</string>
    <string name="theme_fab_save">Save Button</string>
    <string name="theme_fab_crop">Crop Button</string>
    <string name="theme_fab_edit">Edit Button</string>
    <string name="theme_fab_share">Share Button</string>
    <string name="theme_fab_pressed">Pressed Buttons</string>
    <string name="theme_fab_pressed_summary">Change color of the pressed buttons</string>
    <string name="theme_fab_background">Background color</string>
    <string name="theme_fab_background_summary">Change color of the background when FAB is expanded</string>
    <string name="time_context_headers">Time Contextual Headers</string>
    <string name="enable_time_context_headers_summary">Enable time contextual images</string>
    <string name="disable_time_context_headers_summary">Disable time contextual images</string>
    <string name="poly_time_context_headers">(Poly) Contextual Headers</string>
    <string name="notify">Wallpaper Notifications</string>
    <string name="notify_content">Get notifications when new wallpapers are added, from the Pushbullet channel.\n\nSubscribe to Papuh\'s channel to get notifications.</string>
    <string name="notify_note"><b>NOTE : Pushbullet is required in order to receive new wallpaper notifications.</b></string>
    <string name="notify_url">https://goo.gl/fMw0tE</string>
    <string name="pushbullet_subscribe">SUBSCRIBE</string>
    <string name="pushbullet_nothanks">NO THANKS</string>
    <string name="grid_changer_column_one">1 Column</string>
    <string name="grid_changer_column_two">2 Columns</string>
    <string name="grid_changer_column_three">3 Columns</string>
    <string name="grid_changer_column_four">4 Columns</string>
    <string name="grid_count_dialog_title">Grid count</string>
    <string name="grid_count_dialog_btn_positive">Set</string>
    <string name="credit_wallpaper">Wallpaper contributed by</string>
    <string name="v2_line1">Initial Release</string>
    <string name="v21_line1">- Fixed FC with "clear cache" menu</string>
    <string name="v21_line2">- Fixed Muzei navbar not being tinted</string>
    <string name="v22_line1">- Improvements to the wall fragments</string>
    <string name="v22_line2">- Remove header\'s profile selection tab</string>
    <string name="v22_line3">- 20 new wallpapers</string>
    <string name="v23_line1">- More under the hood fixes (Thanks Andrzej)</string>
    <string name="v23_line2">- Horizontal scrolling/Pinch to zoom </string>
    <string name="v23_line3">- Pushbullet notification menu (Thanks Sasi)</string>
    <string name="v24_line1">- Reworked how settings handle themeing (Thanks Andrzej)</string>
    <string name="v24_line2">- Added time-context headers to material drawer</string>
    <string name="v24_line3">- Added 95 new wallpapers</string>
    <string name="v24_line4">- Added French translations (Thanks Kevin)</string>
    <string name="v25_line1">- Add more themeing functionality to settings</string>
    <string name="v25_line2">- Fixes to the way FAB works with wallpaper actions</string>
    <string name="v25_line3">- Added WIP grid changer</string>
    <string name="v26_line1">- Moar under the hood changes</string>
    <string name="v26_line2">- Moar translations (french/italian)</string>
    <string name="json_allwalls_url" translatable="false">https://raw.githubusercontent.com/DirtyUnicorns/Papuh-Resources/master/all_wallpapers.json</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="crop">Crop</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="muzeisets_title">Refresh Source every:</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="muzei_info">SETUP A MUZEI SOURCE PRIOR TO SAVING ANY OPTIONS!!</string>
    <string name="addToLiveWallList">Add to the live wallpaper pool</string>
    <string name="theme_fab_addLW">Add to live wall pool Button</string>
</resources>