<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:gpb="http://schemas.android.com/tools"
    android:gravity="center">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar_wall" />

    <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
        android:id="@+id/google_progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        gpb:type="folding_circles"
        android:layout_centerInParent="true"/>

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true">

    <uk.co.senab.photoview.PhotoView
        android:id="@+id/bigwall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    </HorizontalScrollView>

    <View
        android:id="@+id/fabBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/wall_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        fab:fab_addButtonColorNormal="@color/accent"
        fab:fab_addButtonColorPressed="@color/accent_pressed"
        fab:fab_addButtonPlusIconColor="@color/white"
        fab:fab_labelStyle="@style/FabLabels"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/setwall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_check"
            fab:fab_size="mini"
            fab:fab_title="@string/apply" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/savewall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_save"
            fab:fab_size="mini"
            fab:fab_title="@string/save" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/addToLW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_device_now_wallpaper"
            fab:fab_size="mini"
            fab:fab_title="@string/addToLiveWallList" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/cropwall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_crop"
            fab:fab_size="mini"
            fab:fab_title="@string/crop" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/editwall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_edit"
            fab:fab_size="mini"
            fab:fab_title="@string/edit" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/sharewall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_share"
            fab:fab_size="mini"
            fab:fab_title="@string/share" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>